fix: change applaying styles to properly highlight syntax on Firefox

--- a/dev/index.css
+++ b/dev/index.css
@@ -19,19 +19,42 @@ body {
   place-items: center;
   min-width: 320px;
   min-height: 100vh;
+  padding: 16px;
 }
 
 h1 {
-  font-size: 3.2em;
+  font-size: 2.4em;
   line-height: 1.1;
-  margin: 12px 0;
+  margin: 8px 0;
+  text-align: center;
+
+  @media screen and (min-width: 1024px) {
+    font-size: 3.2em;
+    text-align: left;
+  }
 }
 
 .card {
-  padding: 32px 64px;
+  padding: 16px 8px;
   border-radius: 16px;
   background-color: #151b23;
-  min-width: 650px;
+  min-width: 100%;
+  width: 100%;
+  max-width: 100%;
+  box-sizing: border-box;
+
+  syntax-highlight-component {
+    white-space: break-spaces;
+  }
+
+  @media screen and (min-width: 1024px) {
+    min-width: 650px;
+    padding: 32px 64px;
+
+    syntax-highlight-component {
+      white-space: pre;
+    }
+  }
 
   &.card--light {
     background-color: #e1e1e1;
@@ -58,7 +81,12 @@ h1 {
   display: flex;
   justify-content: center;
   align-items: center;
+  flex-direction: column;
   gap: 16px;
+
+  @media screen and (min-width: 1024px) {
+    flex-direction: row;
+  }
 }
 
 .links {
